# Junior

./: .coveragerc  .env.example  .gitignore  ANALYTICS_IMPROVEMENT_PLAN.md  API_CONNECTIVITY_REPORT.md  CHAT_FIX_COMPLETE.md  DEMO_PREPARATION_COMPLETE.md  DRAFTING_STUDIO_IMPROVEMENTS_COMPLETE.md  FIX_SUMMARY.md  IMPROVEMENTS_APPLIED.md  Procfile  README.md  SEARCH_FIX_SUMMARY.md  clear_demo_data.py  debug_live_search.py  diagnostic.py  diagnostic_output.txt  drafting_studio_improvements.md  nixpacks.toml  pyproject.toml  pytest.ini  quick_test.py  railway.json  requirements.txt  run_tests.bat  run_tests_coverage.ps1  start.bat  start.py  test_api.ps1  test_api_connectivity.ps1  test_api_import.py  test_api_live.py  test_chat.py  test_chat_quick.py  test_ddg.py  test_drafting_studio.py  test_drafting_studio_improvements.py  test_import.py  test_rebuilt_search.ps1  test_research.py  (+5 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BACKEND_UPGRADES_SUMMARY.md  COMPLIANCE_IMPLEMENTATION.md  DATA_RETENTION_POLICY.md  DOCUMENTATION_INDEX.md  FEATURE_VERIFICATION.md  GAPS_ADDRESSED_SUMMARY.md  INDICTRANS2_LOCAL_SETUP.md  MARKET_RESEARCH.md  PRIVACY_POLICY.md  REDIS_QUICKSTART.md  REDIS_SETUP_GUIDE.md  SECURITY_AUDIT.md  TESTING_COVERAGE.md
frontend/: .env.production.example  .eslintrc.cjs  clear-demo-data.html  index.html  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
scripts/: init_database.py  smoke_test_services.py  snapshot_supabase_schema.py  verify_supabase_embeddings.py
tests/: conftest.py  test_api_connectivity.py  test_api_search.py  test_chat.py  test_chat_quick.py  test_comprehensive.py  test_connectivity.py  test_core_functionality.py  test_env_loading.py  test_example.py  test_live_endpoints.py  test_pydantic_config.py  test_quick_api.py  test_search_api.py  test_search_debug.py  test_smoke_services.py  test_sources_direct.py  test_streaming.py  test_translation_models.py
(+94 files in other folders)
