[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junior"
version = "0.1.0"
description = "Junior - Your Trusted AI Legal Assistant for Indian Lawyers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Junior Team", email = "team@junior.legal"}
]
keywords = ["legal", "ai", "rag", "langchain", "india", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.0.3",
    "groq>=0.11.0",
    "supabase>=2.0.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "gliner>=0.2.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.2.0",
    "faster-whisper>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
junior = "junior.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
